--- a/src/app/hero-caracteristicas/hero-caracteristicas.component.html
+++ b/src/app/hero-caracteristicas/hero-caracteristicas.component.html
@@ -1,1 +1,12 @@
-<p>hero-caracteristicas works!</p>
+<h2>My héroe más información</h2>
+<div *ngIf="hero">
+
+  <h2>{{hero.name | uppercase}} Details</h2>
+  <div><span>id: </span>{{hero.id}}</div>
+  <div>
+    <label>name:
+      <input [(ngModel)]="hero.name" placeholder="name"/>
+    </label>
+  </div>
+
+</div>
