se crea un nuevo componente (dashboard)

--- a/src/app/hero-caracteristicas/hero-caracteristicas.component.html
+++ b/src/app/hero-caracteristicas/hero-caracteristicas.component.html
@@ -1,7 +1,7 @@
 <h2>My héroe más información</h2>
 <div *ngIf="hero">
 
-  <h2>{{hero.name | uppercase}} Details</h2>
+  <h2>Las características de {{hero.name | uppercase}} :</h2>
   <div><span>id: </span>{{hero.id}}</div>
   <div>
     <label>name:
