--- a/src/app/mensajes-hero/mensajes-hero.component.html
+++ b/src/app/mensajes-hero/mensajes-hero.component.html
@@ -1,8 +1,8 @@
 <div *ngIf="mensajeHeroService.mensajes.length">
 
-  <h2>Messages</h2>
+  <h2>Mensajes</h2>
   <button class="clear"
           (click)="mensajeHeroService.clear()">clear</button>
-  <div *ngFor='let message of mensajeHeroService.mensajes'> {{message}} </div>
+  <div *ngFor='let mensajito of mensajeHeroService.mensajes'> {{mensajito}} </div>
 
 </div>
