--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,8 +1,12 @@
-<h3>Los mejores héeroes</h3>
+<h3>Los mejores héroes</h3>
   <div class="grid grid-pad">
-    <a *ngFor="let hero of heroes" class="col-1-4">
+    <div class="heroes-menu">
+      <a *ngFor="let hero of heroes" class="col-1-4"
+        routerLink="/detalle/{{hero.id}}">
         <div class="module hero">
-          <h4>{{hero.name}}</h4>
+            <h4>{{hero.name}}</h4>
         </div>
-    </a>
+      </a>
+    </div>
+
   </div>
