--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,13 +1,22 @@
 <h2>My Heroes</h2>
+<div>
+  <label>Hero name:
+    <input #heroName />
+  </label>
+  <!-- (click) passes input value to add() and then clears the input -->
 
-
+</div>
 <ul class="heroes">
   <li *ngFor="let hero of heroes">
     <a routerLink="/detalle/{{hero.id}}">
-      <span class="badge">{{hero.id}}</span> {{hero.name}}
+      <span class="badge">{{hero.id}}</span>
+      {{hero.name}}
     </a>
   </li>
 </ul>
+
+<!--<button class="delete" title="delete hero"
+      (click)="delete(hero)">X</button>-->
 
 
 <app-hero-caracteristicas></app-hero-caracteristicas>
