--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,10 @@
 
-<h1>{{title}}</h1>
+<h1 class=" text-9xl font-bold underline">{{title}}</h1>
 
-<nav>
-  <a routerLink="/dashboard">Dashboard</a>
-  <a routerLink="/heroes">Heroes</a>
+<nav class="bg-white border-gray-200 px-2 sm:px-4 py-2.5 rounded dark:bg-gray-900">
+  <a routerLink="/dashboard" class="block py-2 pl-3 pr-4 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white">Dashboard</a>
+  <a routerLink="/heroes"  class="block py-2 pl-3 pr-4 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white">Heroes</a>
+  <app-hero-search></app-hero-search>
 </nav>
 <router-outlet></router-outlet>
 <app-mensajes-hero></app-mensajes-hero>
