--- a/src/app/hero-caracteristicas/hero-caracteristicas.component.html
+++ b/src/app/hero-caracteristicas/hero-caracteristicas.component.html
@@ -1,13 +1,21 @@
 <h2>My héroe más información</h2>
 <div *ngIf="hero">
-
-  <h2>Las características de {{hero.name | uppercase}} :</h2>
-  <div><span>id: </span>{{hero.description}}</div>
-
-
+  <div class="max-w-sm w-full lg:max-w-full lg:flex">
+    <div class="h-48 lg:h-auto lg:w-48 flex-none bg-cover rounded-t lg:rounded-t-none lg:rounded-l text-center overflow-hidden" style="background-image: url('/img/card-left.jpg')" title="Woman holding a mug">
+    </div>
+    <div class="border-r border-b border-l border-gray-400 lg:border-l-0 lg:border-t lg:border-gray-400 bg-white rounded-b lg:rounded-b-none lg:rounded-r p-4 flex flex-col justify-between leading-normal">
+      <div class="mb-8">
+        <div class="text-gray-900 font-bold text-xl mb-2">  <h2>Las características de {{hero.name | uppercase}} :</h2>
+          <div>
+            <img mat-card-image src="{{hero.thumbnail.path}}.{{hero.thumbnail.extension}}">
+          </div>
+        </div>
+        <p class="text-gray-700 text-base">{{hero.description}}</p>
+      </div>
   <div>
-    <img mat-card-image src="{{hero.thumbnail.path}}.{{hero.thumbnail.extension}}">
-  </div>
+
+
+
   <button type="button" (click)="goBack()">go back</button>
 
 </div>
