--- a/src/app/hero-search/hero-search.component.html
+++ b/src/app/hero-search/hero-search.component.html
@@ -1,6 +1,10 @@
-<div id="search-component">
-  <form class="form-inline">
-    <input #inputSearch autofocus type="text" class="form-control" placeholder="Buscar..." (keyup)="onSearchHeroes(inputSearch.value)">
-  </form>
+<div id="search-component" class="relative">
+    <label for="inputSearch" class="mb-2 text-sm font-medium text-gray-900 sr-only dark:text-white">Buscador: </label>
+    <input #inputSearch   id="inputSearch" class="block w-full p-4 pl-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" (input)="onSearchHeroes(inputSearch.value)">
+    <ul class="search-result" *ngFor="let hero of heroes$ | async">
 
+        <a routerLink="/detalle/{{hero.id}}">
+          {{hero.name}}
+      </a>
+    </ul>
 </div>
