--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -1,9 +1,5 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
 
-
-h2 {
+/*h2 {
   text-align: center;
 }
 
@@ -12,7 +8,6 @@ h2 {
   margin: auto;
   max-width: 1000px;
 
-  /* flexbox */
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -35,7 +30,6 @@ a {
   margin: .5rem auto;
   box-sizing: border-box;
 
-  /* flexbox */
   order: 0;
   flex: 0 1 auto;
   align-self: auto;
@@ -51,3 +45,4 @@ a {
 a:hover {
   background-color: #000;
 }
+*/
