--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,8 +1,5 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-h1 {
+/**
+*h1 {
   margin-bottom: 0;
 }
 nav a {
@@ -22,3 +19,4 @@ nav a:hover {
 nav a:active {
   background-color: black;
 }
+*/
