--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,21 +1,32 @@
-<h3>Los mejores héroes</h3>
-<div fxFlex fxLayout="column">
-  <div fxLayout="row wrap">
-      <div fxFlex="25" fxFlex.md="33" fxFlex.sm="50" fxFlex.xs="100" fxLayout="column"
-          *ngFor="let hero of heroes">
-          <mat-card>
-            <img mat-card-image src="{{hero.thumbnail.path}}.{{hero.thumbnail.extension}}">
-            <a routerLink="/detalle/{{hero.id}}">
 
-              <mat-card-title>
-                {{hero.name}}
-              </mat-card-title>
-            </a>
-          </mat-card>
+
+<h1 class="text-center relative">
+  <p class="text-4xl font-bold text-blue-900">Héroes marvel</p>
+</h1>
+
+<div>
+  <div class="grid grid-cols-4">
+      <div *ngFor="let hero of heroes">
+        <div class="m-3">
+          <div class="bg-red-700 pb-4 rounded-lg shadow-md overflow-hidden">
+            <img src="{{hero.thumbnail.path}}.{{hero.thumbnail.extension}}" alt="{{hero.name}}" class="flex w-full h-64">
+            <div class="p-4 text-center">
+              <h2 class="text-2xl font-medium mb-2 text-white">{{hero.name}}</h2>
+              <div class="text-center">
+                <a routerLink="/detalle/{{hero.id}}" class="text-white bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 shadow-lg shadow-blue-500/50 dark:shadow-lg dark:shadow-blue-800/80 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-4">
+                  Más Info >>>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+
       </div>
 
   </div>
 </div>
+
+
 
 
 
