--- a/src/app/hero-search/hero-search.component.html
+++ b/src/app/hero-search/hero-search.component.html
@@ -1,8 +1,7 @@
-<div id="search-component" class="relative">
-    <label for="inputSearch" class="mb-2 text-sm font-medium text-gray-900 sr-only dark:text-white">Buscador: </label>
-    <input #inputSearch   id="inputSearch" class="block w-full p-4 pl-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" (input)="onSearchHeroes(inputSearch.value)">
-    <ul class="search-result" *ngFor="let hero of heroes$ | async">
+<div id="search-component" class="absolute right-0">
 
+    <input #inputSearch  id="inputSearch" class="items-center w-full px-10 py-5  mr-8 mb-4 space-x-4 text-purple-500 bg-purple divide-x divide-purple-200 rounded-lg shadow top-5 left-5 dark:text-purple-400 dark:divide-purple-700 space-x dark:bg-purple-800" (input)="onSearchHeroes(inputSearch.value)">
+    <ul class="search-result" *ngFor="let hero of heroes$ | async">
         <a routerLink="/detalle/{{hero.id}}">
           {{hero.name}}
       </a>
