--- a/src/app/heroes/heroes.component.scss
+++ b/src/app/heroes/heroes.component.scss
@@ -1,8 +1,5 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-.heroes {
+/**
+*.heroes {
   margin: 0 0 2em 0;
   list-style-type: none;
   padding: 0;
@@ -45,3 +42,5 @@
   margin-right: .8em;
   border-radius: 4px 0 0 4px;
 }
+
+*/
