--- a/src/app/mensajes-hero/mensajes-hero.component.scss
+++ b/src/app/mensajes-hero/mensajes-hero.component.scss
@@ -1,7 +1,5 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
+/**
+*
 h2 {
   color: red;
   font-family: Arial, Helvetica, sans-serif;
@@ -36,3 +34,5 @@ button.clear {
   color: #333;
   margin-bottom: 12px;
 }
+
+*/
