--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -6,9 +6,9 @@
       <ul class="w-28 ">
         <li *ngFor="let hero of heroes">
           <a routerLink="/detalle/{{hero.id}}">
-            <div class="my-6 w-full inline-flex">
+            <div class="my-6 w-full flex">
                 <span class="badge bg-blue-400 p-3 rounded">{{hero.id}}</span>
-                <div class="inline-flex">
+                <div class="block">
                   {{hero.name}}
                 </div>
             </div>
@@ -17,7 +17,7 @@
         </li>
       </ul>
       <div>
-        <p>{{offset +1}} - {{offset + limit +1}} </p>
+        <p>Página {{offset +1}} de {{offset + limit +1}} </p>
       </div>
     </div>
     <div class="relative text-center inline-flex">
@@ -28,10 +28,10 @@
       <button [disabled]="offset === 0" class="relative focus:outline-none text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-900"
             (click)="prevPagina()">Anterior
           </button>
-      <button [disabled]="offset >= total - 2" class="relative focus:outline-none text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-900"
+      <button [disabled]="offset >= total - 2"  class="relative focus:outline-none text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-900"
             (click)="siguientePagina()">Siguiente
           </button>
-      <button [disabled]="offset >= total - 2" class="relative focus:outline-none text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-900"
+      <button [disabled]="offset >= total - 20" class="relative focus:outline-none text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-900"
         (click)="ultimaPag()">
           >>>
       </button>
