--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,3 @@
-
-
 <h1 class="text-center relative">
   <p class="text-4xl font-bold text-blue-900">Héroes marvel</p>
 </h1>
@@ -9,10 +7,10 @@
       <div *ngFor="let hero of heroes">
         <div class="m-3">
           <div class="bg-red-700 pb-4 rounded-lg shadow-md overflow-hidden">
-            <img src="{{hero.thumbnail.path}}.{{hero.thumbnail.extension}}" alt="{{hero.name}}" class="flex w-full h-64">
+            <img src="{{hero.thumbnail.path}}.{{hero.thumbnail.extension}}" alt="{{hero.name}}" class="flex w-full h-64 transition duration-500 ease-in-out transform hover:-translate-y-1 hover:scale-110">
             <div class="p-4 text-center">
-              <h2 class="text-2xl font-medium mb-2 text-white">{{hero.name}}</h2>
-              <div class="text-center">
+              <div class="text-center text-white transition duration-500 ease-in-out transform hover:text-black hover:scale-110">
+                <h2 class="text-2xl font-medium mb-2 ">{{hero.name}}</h2>
                 <a routerLink="/detalle/{{hero.id}}" class="text-white bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 shadow-lg shadow-blue-500/50 dark:shadow-lg dark:shadow-blue-800/80 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-4">
                   Más Info >>>
                 </a>
@@ -25,8 +23,3 @@
 
   </div>
 </div>
-
-
-
-
-
