--- a/src/app/hero-search/hero-search.component.html
+++ b/src/app/hero-search/hero-search.component.html
@@ -1,7 +1,7 @@
 <div id="search-component" class="absolute right-0">
   <div class="relative">
-    <input #inputSearch  id="inputSearch" class="items-center w-full px-10 py-5  mr-8 mb-4 space-x-4 text-blue-900 bg-blue divide-x divide-blue-200 rounded-lg shadow top-5 left-5 dark:text-blue-400 dark:divide-blue-700 space-x dark:bg-blue-800" (input)="onSearchHeroes(inputSearch.value)">
-    <i class="fas fa-search text-2xl absolute top-3 left-3 text-blue-500"></i>
+    <input #inputSearch  id="inputSearch" class="items-center w-full px-8 py-3  mb-4 space-x-4 text-blue-900 bg-blue divide-x divide-blue-200 rounded-lg shadow left-8 dark:text-blue-400 dark:divide-blue-700 dark:bg-blue-800 text-xl" (input)="onSearchHeroes(inputSearch.value)">
+    <i class="fas fa-search text-xl absolute top-3 left-3 pr-2 text-blue-500 "></i>
   </div>
 
   <div class="relative z-50">
