--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,45 +1,37 @@
-<div class="">
-  <h2>My Heroes</h2>
+<div class="flex justify-center bg-red-300">
+  <div class="w-full max-w-lg">
+    <h2 class="text-center font-bold mb-4">Todos Los Heroes del mundo</h2>
 
-  <div class="absolute w-48">
-    <div class="relative">
-      <ul class="w-28 ">
+    <div class="bg-red-300 rounded-lg shadow-md">
+      <ul class="divide-y divide-blue-500">
         <li *ngFor="let hero of heroes">
-          <a routerLink="/detalle/{{hero.id}}">
-            <div class="my-6 w-full flex">
-                <span class="badge bg-blue-400 p-3 rounded">{{hero.id}}</span>
-                <div class="block">
-                  {{hero.name}}
-                </div>
+          <a routerLink="/detalle/{{hero.id}}" class="block hover:bg-blue-300 py-3 px-4">
+            <div class="flex items-center">
+              <span class="font-bold mr-2">{{hero.id}}</span>
+              <div class="">{{hero.name}}</div>
             </div>
-
           </a>
         </li>
       </ul>
-      <div>
-        <p>Página {{offset +1}} de {{offset + limit +1}} </p>
-      </div>
     </div>
-    <div class="relative text-center inline-flex">
-      <button [disabled]="offset === 0" class="relative focus:outline-none text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-900"
-          (click)="primeraPag()">
+
+    <div class="flex justify-center mt-4">
+      <button [disabled]="offset === 0" class="px-4 py-2 mr-2 text-sm font-medium text-white bg-blue-700 rounded-lg shadow-md hover:bg-blue-800 focus:outline-none focus:ring-4 focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-900"
+        (click)="primeraPag()">
         &lt;&lt;&lt;
       </button>
-      <button [disabled]="offset === 0" class="relative focus:outline-none text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-900"
-            (click)="prevPagina()">Anterior
-          </button>
-      <button [disabled]="offset >= total - 2"  class="relative focus:outline-none text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-900"
-            (click)="siguientePagina()">Siguiente
-          </button>
-      <button [disabled]="offset >= total - 20" class="relative focus:outline-none text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-900"
-        (click)="ultimaPag()">
-          >>>
+      <button [disabled]="offset === 0" class="px-4 py-2 mr-2 text-sm font-medium text-white bg-blue-700 rounded-lg shadow-md hover:bg-blue-800 focus:outline-none focus:ring-4 focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-900"
+        (click)="prevPagina()">
+        Anterior
       </button>
-
-
+      <button [disabled]="offset >= total - 2" class="px-4 py-2 mr-2 text-sm font-medium text-white bg-blue-700 rounded-lg shadow-md hover:bg-blue-800 focus:outline-none focus:ring-4 focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-900"
+        (click)="siguientePagina()">
+        Siguiente
+      </button>
+      <button [disabled]="offset >= total - 20" class="px-4 py-2 text-sm font-medium text-white bg-blue-700 rounded-lg shadow-md hover:bg-blue-800 focus:outline-none focus:ring-4 focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-900"
+        (click)="ultimaPag()">
+        >>>
+      </button>
     </div>
   </div>
-
-
-
 </div>
