--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 
-<div class="bg-red-400">
+<div class="bg-red-400 font-custom">
 
   <h1 class="text-center relative">
     <p class="text-6xl font-bold text-blue-900">{{title}}</p>
