--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,9 +1,9 @@
-<h1 class="text-center relative">
+<h1 class="text-center relative font-custom">
   <p class="text-4xl font-bold text-blue-900">Héroes marvel</p>
 </h1>
 
 <div>
-  <div class="grid grid-cols-4">
+  <div class="grid grid-cols-4 font-custom">
       <div *ngFor="let hero of heroes">
         <div class="m-3">
           <div class="bg-red-700 pb-4 rounded-lg shadow-md overflow-hidden">
