--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,14 +1,14 @@
-<div class="flex justify-center bg-red-300">
+<div class="flex justify-center bg-red-300 font-custom">
   <div class="w-full max-w-lg">
     <h2 class="text-center font-bold mb-4">Todos Los Heroes del mundo</h2>
 
     <div class="bg-red-300 rounded-lg shadow-md">
       <ul class="divide-y divide-blue-500">
         <li *ngFor="let hero of heroes">
-          <a routerLink="/detalle/{{hero.id}}" class="block hover:bg-blue-300 py-3 px-4">
+          <a routerLink="/detalle/{{hero.id}}" class="block hover:bg-blue-300 hover:text-xl py-3 px-4">
             <div class="flex items-center">
-              <span class="font-bold mr-2">{{hero.id}}</span>
-              <div class="">{{hero.name}}</div>
+              <span class="font-bold mr-2 text-red-800">{{hero.id}}</span>
+              <div class=" text-red-800">{{hero.name}}</div>
             </div>
           </a>
         </li>
