--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -11,7 +11,7 @@
             <div class="p-4 text-center">
               <div class="text-center text-white transition duration-500 ease-in-out transform hover:text-black hover:scale-110">
                 <h2 class="text-2xl font-medium mb-2 ">{{hero.name}}</h2>
-                <a routerLink="/detalle/{{hero.id}}" class="text-white bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 shadow-lg shadow-blue-500/50 dark:shadow-lg dark:shadow-blue-800/80 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-4">
+                <a href="/detalle/{{hero.id}}" class="inline-block text-white font-medium rounded-lg text-lg px-5 py-2.5 bg-gradient-to-r from-black to-blue-500 hover:from-blue-500 hover:to-black mr-2 mb-4">
                   Más Info >>>
                 </a>
               </div>
