--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,8 +7,8 @@
 
   <div class="inline-flex left-0">
     <nav class="inline-flex m-3">
-      <a routerLink="/dashboard"  class="text-white bg-gradient-to-r from-red-500 via-red-600 to-red-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 shadow-lg shadow-red-500/50 dark:shadow-lg dark:shadow-red-800/80 font-medium rounded-lg text-base px-10 py-5 text-center mr-8 mb-4">Dashboard</a>
-      <a routerLink="/heroes"  class="text-white bg-gradient-to-r from-red-500 via-red-600 to-red-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 shadow-lg shadow-red-500/50 dark:shadow-lg dark:shadow-red-800/80 font-medium rounded-lg text-base px-10 py-5 text-center mr-8 mb-4">Heroes</a>
+      <a routerLink="/dashboard"  class="text-white font-bold bg-gradient-to-r from-red-500 via-red-600 to-red-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 shadow-lg shadow-red-500/50 dark:shadow-lg dark:shadow-red-800/80 rounded-lg text-base px-10 py-5 text-center mr-8 mb-4">Dashboard</a>
+      <a routerLink="/heroes"  class="text-white font-bold bg-gradient-to-r from-red-500 via-red-600 to-red-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 shadow-lg shadow-red-500/50 dark:shadow-lg dark:shadow-red-800/80 rounded-lg text-base px-10 py-5 text-center mr-8 mb-4">Heroes</a>
     </nav>
     <div class="absolute right-0 top w-full flex">
       <app-hero-search></app-hero-search>
