--- a/src/app/hero-caracteristicas/hero-caracteristicas.component.html
+++ b/src/app/hero-caracteristicas/hero-caracteristicas.component.html
@@ -1,7 +1,7 @@
 
 <div *ngIf="hero">
-  <div class="bg-red-200 shadow-md rounded-lg overflow-hidden">
-    <div class="flex justify-center items-center bg-red-200 rounded-t-lg overflow-hidden">
+  <div class="shadow-md rounded-lg overflow-hidden h-full">
+    <div class="flex justify-center items-center rounded-t-lg overflow-hidden">
       <div class="flex flex-col items-center p-4">
         <div class="mb-4">
           <div class="bg-red-200 w-96 h-96 flex items-center justify-center rounded-lg overflow-hidden hover:animate-pulse">
